# bevy_mines

./: Cargo.toml  build_android.sh  run_win.sh
assets/sprites/: tiles.afphoto
docker/android/: Dockerfile
docker/win/: Dockerfile
src/: assets.rs  globals.rs  lib.rs  states.rs
src/board/: components.rs  mod.rs
src/graphics/: board_ui.rs  mod.rs  tiles.rs
src/main_menu/: mod.rs
