[package]
name = "bevy_mines"
version = "0.1.0"
edition = "2021"

[lib]
crate_type=["staticlib", "cdylib"]

[[bin]]
path = "src/lib.rs"
name = "mines"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.android]
package = "com.maciejglowka.bevy_mines"
build_targets = ["armv7-linux-androideabi"]
assets = "assets"
apk_name = "Bevy"
strip = "strip"

[package.metadata.android.sdk]
target_sdk_version = 33

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# bevy = "0.13"
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "release-0.13.1" }
rand = "0.8"
